# win-thread-deadlock

./: README.md  thread-deadlock.cabal
app/: Main.hs
src/: Socket.hs
